feat: add benchmark scripts to test suite as well

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "riscv-compliance"]
 	path = riscv-compliance
 	url = https://github.com/nervosnetwork/riscv-compliance
+[submodule "ckb-vm-bench-scripts"]
+	path = ckb-vm-bench-scripts
+	url = https://github.com/nervosnetwork/ckb-vm-bench-scripts
