feat: Upgrade bytes dependency

--- a/binary/Cargo.toml
+++ b/binary/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 autobins = false
 
 [dependencies]
-bytes = "0.4.12"
+bytes = "0.5.4"
 ckb-vm = { path = "../ckb-vm", features = ["asm"] }
 
 [[bin]]
@@ -16,6 +16,18 @@ path = "src/aot64.rs"
 [[bin]]
 name = "asm64"
 path = "src/asm64.rs"
+
+[[bin]]
+name = "asm64_step"
+path = "src/asm64_step.rs"
+
+[[bin]]
+name = "aot64_compile"
+path = "src/aot64_compile.rs"
+
+[[bin]]
+name = "asm64_200"
+path = "src/asm64_200.rs"
 
 [[bin]]
 name = "interpreter64"
