update arch test repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "riscv-compliance"]
 	path = riscv-compliance
 	url = https://github.com/nervosnetwork/riscv-compliance
+	branch = update
 [submodule "ckb-vm-bench-scripts"]
 	path = ckb-vm-bench-scripts
 	url = https://github.com/nervosnetwork/ckb-vm-bench-scripts
