--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,7 @@
 jobs:
   - job: TestSuite
+    pool:
+      vmImage: 'ubuntu-18.04'
     steps:
       - script: git submodule update --init --recursive
         displayName: Update git submodules
@@ -7,11 +9,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y autoconf automake autotools-dev libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo gperf libtool patchutils bc zlib1g-dev libexpat-dev
         displayName: Install RISC-V dependencies
-      - script: docker run --rm -v `pwd`:/code xxuejie/riscv-gnu-toolchain-rv64imac:xenial-20190606 cp -r /riscv /code/
+      - script: docker run --rm -v `pwd`:/code nervos/ckb-riscv-gnu-toolchain:bionic-20210804 cp -r /riscv /code/
         displayName: Extract RISC-V GNU toolchain files
       - script: RISCV=`pwd`/riscv ./test.sh --update-ckb-vm
         displayName: Test Suite
   - job: Coverage
+    pool:
+      vmImage: 'ubuntu-18.04'
     steps:
       - script: git submodule update --init --recursive
         displayName: Update git submodules
@@ -29,7 +33,7 @@ jobs:
           cd ../..
           kcov --version
         displayName: Install kcov
-      - script: docker run --rm -v `pwd`:/code xxuejie/riscv-gnu-toolchain-rv64imac:xenial-20190606 cp -r /riscv /code/
+      - script: docker run --rm -v `pwd`:/code nervos/ckb-riscv-gnu-toolchain:bionic-20210804 cp -r /riscv /code/
         displayName: Extract RISC-V GNU toolchain files
       - script: RISCV=`pwd`/riscv ./test.sh --update-ckb-vm --coverage
         displayName: Coverage
