riscv-arch-test specify a branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,4 @@
 [submodule "riscv-arch-test"]
 	path = riscv-arch-test
 	url = https://github.com/riscv-non-isa/riscv-arch-test.git
+	branch = a3b7f0c2cf89652b8a0cba3146890c512ff8ba44
